# wet-toast-talk-radio

./: .dockerignore  .gitignore  .pylintrc  .python-version  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  create_requirements.sh  dev-requirements.txt  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  cdk.yml  conventional_commits.yml  python.yml  release.yml
audio-generator/: .gitignore  README.md  main.py  pyproject.toml
audio-generator/resources/: noodle-nose.txt
audio_generator/: __init__.py  audio_generator.py  config.py
audio_generator/tests/: test_config.py
aws/: .eslintignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
aws/lib/: audio-generator.ts  cfn-parameters.ts  cluster.ts  custom-autoscaling-group.ts  dev-stack.ts  media-store.ts  message-queue.ts  model-cache.ts  open-api.ts  playlist.ts  resource-name.ts  script-writer.ts  shout-client.ts  slack-bots.ts  transcode-service.ts  transcoder.ts  ui.ts  voscast-server.ts  wet-toast-bucket.ts  wet-toast-talk-show-stack.ts
benchmark/: Dockerfile  media_transcoder.py  tortoise.py  tortoise_benchmark.py
command/: __init__.py  audio_generator.py  config.py  disc_jokey.py  root.py
disc_jockey/: __init__.py  config.py  disc_jockey.py  media_transcoder.py
disc_jockey/tests/: test_config.py  test_media_transcoder.py
docker/cpu/: Dockerfile
ices/dev/: playlist.txt
ices/prod/: ices.xml
media_store/: __init__.py  media_store.py
media_store/s3/: __init__.py  s3.py
media_store/virtual/: __init__.py  bucket.py  media_store.py  virtual.py
media_store/virtual/tests/: test_virtual_bucket.py  test_virtual_media_store.py
notebooks/: rag-demo.ipynb
src/wet_toast_talk_radio/command/: audio_generator.py  disc_jokey.py
src/wet_toast_talk_radio/disc_jockey/: media_transcoder.py
src/wet_toast_talk_radio/media_store/: __init__.py  config.py
tests/: conftest.py  conftests.py  test_audio_generator.py  test_playlist.py  test_s3_model_cache.py  test_scriptwriter.py  test_stream.py  test_transcode.py
ui/: audio.js  content.js  index.html  style.css
ui/pool/: content.js  index.html
wet_toast_talk_radio/: main.py
wet_toast_talk_radio/audio_generator/: __init__.py  audio_generator.py  cache.py  config.py  model_cache.py  speakers.py
wet_toast_talk_radio/audio_generator/resources/: voices-metadata.json
wet_toast_talk_radio/audio_generator/tests/: test_speakers.py
wet_toast_talk_radio/command/: __init__.py  audio_generator.py  config.py  disc_jockey.py  disc_jokey.py  noop.py  print_banner.py  root.py  scriptwriter.py  secret_val.py
wet_toast_talk_radio/command/resources/: audio_generator_banner.txt  scriptwriter_banner.txt
wet_toast_talk_radio/command/tests/: test_config.py
wet_toast_talk_radio/common/: aws_clients.py  dialogue.py  log_ctx.py  logger.py  path.py  secret_val.py  task_log_ctx.py
wet_toast_talk_radio/common/tests/: show69.jsonl  test_dialogue.py
wet_toast_talk_radio/disc_jockey/: __init__.py  auto_dj.py  config.py  copy.py  disc_jockey.py  media_transcoder.py  playlist.py  playlist_event_handler.py  shout_client.py
wet_toast_talk_radio/disc_jockey/tests/: mock_shout.py  test_media_transcoder.py  test_playlist.py  test_shout_client.py
wet_toast_talk_radio/emergency_alert_system/: config.py  emergency_alert_system.py
wet_toast_talk_radio/media_store/: __init__.py  config.py  media_store.py  new_media_store.py
wet_toast_talk_radio/media_store/common/: date.py
wet_toast_talk_radio/media_store/data/: load_store.py  show69.json  (+1 more)
wet_toast_talk_radio/message_queue/: __init__.py  config.py  message_queue.py  new_message_queue.py
wet_toast_talk_radio/radio_operator/: config.py  radio_operator.py
wet_toast_talk_radio/screenwriter/: README.md  config.py  screenwriter.py
wet_toast_talk_radio/scriptwriter/: README.md  __init__.py  adverts.py  config.py  io.py  modern_mindfulness.py  names.py  new_llm.py  program.py  prompts.py  radio_show.py  scriptwriter.py  shows.py  the_great_debate.py  topics.py  traits.py
(+178 files in other folders)
