
[project]
name = "wet-toast-talk-radio"
version = "1.3.0"
description = ""
authors = [
    { name = "camille-vanhoffelen", email = "camille-vanhoffelen@users.noreply.github.com" },
    { name = "raphael-vanhoffelen", email = "dskart11@gmail.com" },
]
dependencies = [
    "structlog>=23.1.0",
    "click>=8.1.3",
    "pydantic==1.10.8",
    "pydub>=0.25.1",
    "wave>=0.0.2",
    "openai>=0.27.7",
    "boto3>=1.26.146",
    "python-shout>=0.2.8",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "guidance==0.0.64",
    "numpy==1.23",
    "transformers>=4.32.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "hypothesis>=6.115.3",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
wet-toast = "wet_toast_talk_radio.main:main"


[tool.pytest.ini_options]
markers = ["integration: mark test as an integration test"]

